K8sDeployments/clientapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientapp-deployment
  labels:
    app: clientapp
spec:
  replicas: 4
  selector:
    matchLabels:
      app: clientapp
  template:
    metadata:
      labels:
        app: clientapp
    spec:
      containers:
      - name: clientapp
        image: musakucuk99/clientapp
