K8sDeployments/sayhelloapi:2.0-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sayhelloapi-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sayhelloapi
      version: v2
  template:
    metadata:
      labels:
        app: sayhelloapi
        version: v2
    spec:
      containers:
      - name: sayhelloapi
        image: musakucuk99/sayhello:2.0
        ports:
        - containerPort: 8000
