K8sDeployments/sayhelloapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sayhelloapi-service
spec:
  selector:
    app: sayhelloapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
