K8sDeployments/istio-destinationrule-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: sayhelloapi-destination
spec:
  host: sayhelloapi-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sayhelloapi-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - sayhelloapi-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: sayhelloapi-service
        subset: v1
      weight: 50
    - destination:
        host: sayhelloapi-service
        subset: v2
      weight: 50
